fix: Page Title wrapping and centering

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1039,3 +1039,9 @@ img.img-loading:after {
 	font-family: 'Octicons';
 	content: "\f00b";
 }
+
+// utilities
+
+.whitespace-nowrap {
+	white-space: nowrap;
+}
